
	* src/gnome/window-acct-tree.c,
	src/import-export/hbci/gncmod-hbci.c: fix more menu item strings.

2002-10-23  Derek Atkins  <derek@ihtfp.com>
	* de.po: fix a string for Christian so it compiles.

	* new translations require leading underscores for menu names
	  or the lookups fail when adding new menus.  In particular,
	  "_Actions", "_Toolbar", and "_Status Bar".

2002-10-22  Derek Atkins  <derek@ihtfp.com>
   Fix a bunch of compiler warnings:
	* Transaction-matcher.c: use "=" not "==" to set a variable
	* gncmod-generic-import.c: comment out unused variable "engine"
	* dialog-scheduledxaction.c: comment out unused function
	* gnc-splash.[ch]: change splash-update to take a const string

2002-10-22  Christian Stimming  <stimming@tuhh.de>

	* po/glossary/gnc-glossary.txt, po/glossary/*: Update glossary
	(added Scheduled Transactions). Merge glossaries from 1.6 branch
	onto HEAD.

2002-10-21  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-scheduledxaction.c (gnc_sxed_update_cal): Check
	validatity of date before subsequent processing; fixes Bug#96467.

	* src/gnome-utils/gnc-dense-cal.c
	(gnc_dense_cal_mark)
	(gnc_dense_cal_mark_remove): Queue a re-draw when marks are added
	or removed; fixes Bug#96468.

	* src/gnome-utils/gnc-frequency.c (year_range_sels_changed): Emit
	"changed" signal when the year-range selections change; fixes
	Bug#96470.

	* src/gnome/dialog-scheduledxaction.c (gnc_sxed_check_consistent):
	Free the name str after we've used it [conrad-found, unfiled bug].

	* src/gnome-utils/gnc-dense-cal.c (populate_hover_window): Now
	more tolerant of mark sets without names.

	* src/gnome/druid-loan.c:
	* src/gnome/dialog-scheduledxaction.c: Cleaned up compilation
	warnings so -Werror can go back on soon.

	* src/gnome/window-main.c (gnc_main_window_create_menus): Reworded
	MenuItem for loan-repayment druid as per Chris' suggestion.

2002-10-21  Derek Atkins  <derek@ihtfp.com>